# dhlottery-api

./: ..pylintrc.un~  .env.sample  .gitignore  .pylintrc  .pylintrc~  .pyproject.toml.un~  CONTRIBUTING.md  CONTRIBUTION.md  Makefile  README.md  README_EN.md  build.bat  main.py  py_file_tree.txt  py_file_tree_with_content.txt  pyproject.toml  requirements.txt  setup.py  setup_for_android.py
.github/: CODEOWNERS  release-drafter.yml
.github/workflows/: action.yml  build-publish-release-note.yml  build-publish.yml  buyLotto645.yml  lintfmt.yml  main.yml  release-drafter.yml  tag-and-publish.yml
docs/: CONTRIBUTING.md
lib/: auth.py  lotto645.py
src/: collect_tree.py  main.py  scan_tree.py
src/dhapi/: README.md  __init__.py  __main__.py  _version.py  dhapi.py  main.c  main.py
src/dhapi/client/: lottery_client.py  mailjet_email_client.py
src/dhapi/config/: logger.py
src/dhapi/configuration/: logger.py
src/dhapi/domain/: deposit.py  email_form.py  lotto645_ticket.py  user.py
src/dhapi/domain_object/: lotto645_buy_request.py
src/dhapi/endpoint/: lottery_email_sender.py  lottery_stdout_printer.py  version_stdout_printer.py
src/dhapi/lib/: auth.py  controller.py  lotto645.py
src/dhapi/meta/: version_provider.py
src/dhapi/port/: credentials_provider.py  lottery_client.py  mailjet_email_client.py
src/dhapi/purchase/: dhlottery_balance_formatter.py  (+2 more)
tests/: test_arg_parser.py  test_mailjet_email_client.py  test_release_drafter_config.py  test_setup.py  test_version.py  test_version_provider.py  test_version_scm.py  test_workflow_trigger.py
(+18 files in other folders)
