[tool.poetry]
name = "pr-dhlottery-api"
version = "0.1.0"
description = ""
authors = ["seunggabi <seunggabi@naver.com>"]
readme = "README.md"
packages = [{include = "pr_dhlottery_api"}]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
requests = "^2.28.2"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

